# client-project

./: database.py  inventory.db  main.py  pyproject.toml  requirements.txt
pages/: 1_Dashboard.py  2_Products.py  3_Customers.py  4_Orders.py  5_Sales_History.py  6_Reports.py
utils/: session.py
